# nexus

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  NEXUS_DOCUMENTATION_ALIGNMENT_SUMMARY.md  NEXUS_FIRST_IMPRESSION.md  ONBOARDING.md  README.md  alembic.ini  mcp_report.md  pyproject.toml  ruff.toml
adr/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-007-persistence-authority.md  ADR-008-shadow-migration.md  ADR-009-runtime-selection-ownership.md  README.md
alembic/: env.py
blueprint/: GAPS_AND_RISKS.md  README.md  ROADMAP.md  STATUS.md
config/: repositories.yaml  settings.example.yaml
contracts/: README.md  artifact.md  capability.md  checkpoint.md  context_package.md  event.md  execution_graph.md  execution_strategy.md  goal.md  intent.md  knowledge.md  observation.md  plan.md  policy.md  reflection.md  resource.md  skill.md  work_package.md
docker/: Dockerfile  docker-compose.yml
docs/: 00_BRIEF.md  01_ARCHITECTURE.md  07_HERMES_AGENT.md  DOCUMENTATION_MASTER_PLAN.md  DOCUMENTATION_PHASE2_REPORT.md  DOCUMENTATION_PHASE3_REPORT.md  DOCUMENTATION_PHASE4_REPORT.md  DOCUMENTATION_PHASE5_REPORT.md  DOCUMENTATION_PHASE6_REPORT.md  DOCUMENTATION_PHASE7_REPORT.md  INITIAL_PROMPT.md  README.md  RULES.md
examples/: README.md
nexus/: __init__.py  __main__.py  api.py  config.py  database.py  logging_config.py  onboarding.py
nexus_approval/: __init__.py  composition.py  events.py  exchange.py  model.py  observability.py  session.py
nexus_briefings/: __init__.py  brieftype.py  composer.py  coordinator.py  document.py  renderers.py  session.py  workflow.py
nexus_context/: README.md  __init__.py  builder.py  categories.py  collectors.py  composition.py  conflict_detector.py  events.py  freshness.py  ids.py  normalizer.py  relevance.py  requests.py  service.py  validators.py
nexus_core/: README.md  __init__.py
nexus_engineering/: __init__.py  composition.py  engine.py  events.py  ids.py  model.py  observability.py  persistence.py  reasoner.py  vocabulary.py
nexus_estimation/: __init__.py  baseline.py  composition.py  confidence.py  engine.py  events.py  ids.py  model.py  observability.py  persistence.py  rules.py  signals.py  vocabulary.py
nexus_execution/: __init__.py  adapter.py  composition.py  engine.py  errors.py  observability.py  results.py  signals.py
nexus_harness/: __init__.py  artifact_resolver.py  capability_resolver.py  composition.py  context_resolver.py  events.py  harness.py  ids.py  manifest_builder.py  package_builder.py  policy_resolver.py  requests.py  skill_resolver.py  sources.py  validator.py  validators.py  vocabulary.py
nexus_history/: __init__.py  composition.py  engine.py  events.py  ids.py  lineage.py  model.py  observability.py  persistence.py  projection.py  retrieval.py  timeline.py
nexus_human_interaction/: __init__.py  composition.py  events.py  facade.py  model.py  observability.py  reference.py  session.py
nexus_infra/: README.md  __init__.py  clock.py  composition.py  durable.py  errors.py  event_bus.py  event_store.py  event_versioning.py  identifiers.py  observability.py  projections.py  repositories.py  serialization.py  snapshots.py  unit_of_work.py
nexus_integration/: __init__.py  comparator.py  composition.py  coordinator.py  events.py  flags.py  gateway.py  ids.py  model.py  observability.py  recorder.py
nexus_intent/: __init__.py  composition.py  engine.py  events.py  ids.py  interpreter.py  model.py  observability.py  persistence.py
nexus_knowledge/: __init__.py  acceptance.py  candidate.py  composition.py  engine.py  events.py  evolution.py  ids.py  lifecycle.py  model.py  observability.py  persistence.py  policy.py  retrieval.py  vocabulary.py
nexus_operations/: __init__.py  composition.py  diagnostics.py  events.py  health.py  model.py  observability.py  service.py
nexus_operator/: __init__.py  analysis.py  dashboard.py  explorer.py  history.py  search.py  session.py  submission.py  timeline.py
nexus_orchestration/: README.md  __init__.py  approvals.py  composition.py  dependency_tracker.py  events.py  execution_session.py  harness_requests.py  ids.py  orchestrator.py  queue.py  registry.py  requests.py  runtime_requests.py  validators.py  vocabulary.py
nexus_planning/: README.md  __init__.py  capability_resolver.py  composition.py  decomposition.py  events.py  execution_graph_builder.py  ids.py  plan_builder.py  planner.py  requests.py  strategy_assigner.py  strategy_binding.py  validators.py  work_package_generator.py
nexus_policy/: __init__.py  composition.py  conditions.py  defaults.py  engine.py  events.py  ids.py  model.py  observability.py  precedence.py  registry.py
nexus_recovery/: __init__.py  classification.py  composition.py  engine.py  evaluator.py  events.py  ids.py  observability.py  persistence.py  plan.py  policy.py  rules.py  vocabulary.py
nexus_reflection/: __init__.py  analyzers.py  collector.py  composition.py  engine.py  episode.py  events.py  ids.py  observability.py  patterns.py  persistence.py  report.py  synthesis.py  vocabulary.py
nexus_repository/: __init__.py  composition.py  discovery.py  engine.py  events.py  graph.py  ids.py  inventory.py  observability.py  persistence.py  profile.py  scanner.py
nexus_research/: __init__.py  brief.py  coordinator.py  recovery.py  session.py  topic.py  workflow.py
nexus_runtime/: README.md  __init__.py  allocation.py  composition.py  events.py  ids.py  lifecycle.py  observability.py  persistence.py  requests.py  runtime_manager.py  runtime_registry.py  runtime_session.py  validators.py  vocabulary.py
nexus_runtime_adapters/: __init__.py  catalog.py  crossruntime.py  registry.py  selection.py
nexus_runtime_claude/: __init__.py  adapter.py  invoker.py
nexus_runtime_gemini/: __init__.py  adapter.py  invoker.py
nexus_runtime_shell/: __init__.py  adapter.py  invoker.py
nexus_scheduler/: __init__.py  __main__.py  autonomy.py  composition.py  dispatcher.py  events.py  model.py  observability.py  registry.py  scheduled_operations.py  timing.py  (+1 more)
(+1115 files in other folders)
