[project]
name = "nexus"
version = "0.1.0"
description = "Nexus — AI Orchestration Control Plane"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.21.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0.0",
    "apscheduler>=3.10.0",
    "discord.py>=2.4.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "aiosmtplib>=3.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
nexus = "nexus.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "respx>=0.22.0",
    "httpx>=0.28.0",
    "mypy>=1.13",
    "ruff>=0.8.0",
    "factory-boy>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
