[project]
name = "nexus"
version = "0.1.0"
description = "Nexus — AI Orchestration Control Plane"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.21.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0.0",
    "apscheduler>=3.10.0",
    "discord.py>=2.4.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "aiosmtplib>=3.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
nexus = "nexus.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "respx>=0.22.0",
    "httpx>=0.28.0",
    "mypy>=1.13",
    "ruff>=0.11.0",
    "factory-boy>=3.3.0",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Explicit package list: hatchling otherwise discovers only `nexus` (the project
# name) and would silently omit the `nexus_core` foundation from the wheel.
packages = ["nexus", "nexus_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

# Ruff is configured exclusively in `ruff.toml` (the single source of truth).
# A `[tool.ruff]` block here would be silently ignored by Ruff whenever
# `ruff.toml` is present, so it is intentionally omitted to avoid drift.

[tool.coverage.run]
branch = true
omit = ["tests/*", "*/__main__.py"]

[tool.coverage.report]
show_missing = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",  # Protocol / abstract stub bodies are not executable
    "if __name__ == .__main__.:",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.html]
directory = "htmlcov"
